--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>APP</title>
+    <title>家教APP</title>
     <meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="css/jquery.mobile-1.4.2.min.css">
     <script src="js/jquery.js"></script>
     <script src="js/jquery.mobile-1.4.2.min.js"></script>
 </head>
 <body>
-<div data-role="header" data-position="fixed">
-    <h1>APP</h1>
-</div><!-- /header -->
 
+<div data-role="page" id="home" data-title="找家教">
+    <div data-role="header" data-position="fixed" data-tap-toggle="false" data-theme="b">
+        <h1>家教APP</h1>
+    </div><!-- /header -->
 <ul data-role="listview" data-inset="true">
     <li><a href="#">
         <img src="img/1.jpg">
@@ -87,18 +88,46 @@
         <h2>Wolfgang Amadeus Phoenix</h2>
         <p>Phoenix</p></a>
     </li>
-
 </ul>
+    <div data-role="footer" data-position="fixed" data-id="main-tabbar" data-theme="b">
+        <div data-role="navbar">
+            <ul>
+                <li><a href="#home" class="ui-btn-active" data-icon="home" data-theme="b">找家教</a></li>
+                <li><a href="#profile" data-icon="star" data-theme="b">我的信息</a></li>
+            </ul>
+        </div><!-- /navbar -->
+    </div><!-- /footer -->
+</div>
 
-<!--    <div data-role="footer">-->
-<footer>
-    <div data-role="navbar">
-        <ul>
-            <li><a href="a.html" class="ui-btn-active" data-icon="grid" data-theme="a">找家教</a></li>
-            <li><a href="b.html" data-icon="star" data-theme="b">我的信息</a></li>
-        </ul>
-    </div><!-- /navbar -->
-</footer>
-<!--   </div><!-- /footer -->
+<div data-role="page" id="profile" data-title="找家教">
+    <div data-role="header" data-position="fixed" data-tap-toggle="false" data-theme="b">
+        <h1>家教APP</h1>
+    </div><!-- /header -->
+    <ul data-role="listview" data-inset="true">
+        <li><a href="#">
+            <h2>Broken Bells</h2>
+            <p>Broken Bells</p></a>
+        </li>
+        <li><a href="#">
+            <img src="img/1.jpg">
+            <h2>Warning</h2>
+            <p>Hot Chip</p></a>
+        </li>
+        <li><a href="#">
+            <img src="img/1.jpg">
+            <h2>Wolfgang Amadeus Phoenix</h2>
+            <p>Phoenix</p></a>
+        </li>
+    </ul>
+    <div data-role="footer" data-position="fixed" data-id="main-tabbar" data-theme="b">
+        <div data-role="navbar">
+            <ul>
+                <li><a href="#home" class="ui-btn-active ui-state-persist" data-icon="home" data-theme="b">找家教</a></li>
+                <li><a href="#profile" data-icon="star" data-theme="b">我的信息</a></li>
+            </ul>
+        </div><!-- /navbar -->
+    </div><!-- /footer -->
+</div>
+
 </body>
 </html>
