--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
     <title>家教APP</title>
     <meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="css/jquery.mobile-1.4.2.min.css">
+    <link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.4.2.min.css">
     <script src="js/jquery.js"></script>
     <script src="js/jquery.mobile-1.4.2.min.js"></script>
+    <script>
+        $(function(){
+            $("#home").bind("swipeleft",function(){
+                $.mobile.changePage("#profile");
+            });
+            $("#profile").bind("swiperight",function(){
+                $.mobile.changePage("#home", {transition:"slide",reverse:true}, true, true);
+            });
+        });
+    </script>
 </head>
 <body>
 
@@ -92,7 +102,7 @@
     <div data-role="footer" data-position="fixed" data-id="main-tabbar" data-theme="b">
         <div data-role="navbar">
             <ul>
-                <li><a href="#home" class="ui-btn-active" data-icon="home" data-theme="b">找家教</a></li>
+                <li><a href="#home"  data-icon="home" data-theme="b">找家教</a></li>
                 <li><a href="#profile" data-icon="star" data-theme="b">我的信息</a></li>
             </ul>
         </div><!-- /navbar -->
@@ -103,26 +113,34 @@
     <div data-role="header" data-position="fixed" data-tap-toggle="false" data-theme="b">
         <h1>家教APP</h1>
     </div><!-- /header -->
-    <ul data-role="listview" data-inset="true">
-        <li><a href="#">
-            <h2>Broken Bells</h2>
-            <p>Broken Bells</p></a>
-        </li>
-        <li><a href="#">
-            <img src="img/1.jpg">
-            <h2>Warning</h2>
-            <p>Hot Chip</p></a>
-        </li>
-        <li><a href="#">
-            <img src="img/1.jpg">
-            <h2>Wolfgang Amadeus Phoenix</h2>
-            <p>Phoenix</p></a>
-        </li>
-    </ul>
+
+    <div data-role="content">
+        <ul data-role="listview" data-inset="true">
+            <li><a href="#">
+                <h2>Broken Bells</h2>
+                <p>Broken Bells</p></a>
+            </li>
+            <li><a href="#">
+                <img src="img/1.jpg">
+                <h2>Warning</h2>
+                <p>Hot Chip</p></a>
+            </li>
+            <li><a href="#">
+                <img src="img/1.jpg">
+                <h2>Wolfgang Amadeus Phoenix</h2>
+                <p>Phoenix</p></a>
+            </li>
+        </ul>
+        <form>
+            <label for="file-2">File: data-clear-btn="true"</label>
+            <input type="file" data-clear-btn="true" name="file-2" id="file-2" value="xx">
+        </form>
+    </div>
+
     <div data-role="footer" data-position="fixed" data-id="main-tabbar" data-theme="b">
         <div data-role="navbar">
             <ul>
-                <li><a href="#home" class="ui-btn-active ui-state-persist" data-icon="home" data-theme="b">找家教</a></li>
+                <li><a href="#home" class=" ui-state-persist" data-icon="home" data-theme="b">找家教</a></li>
                 <li><a href="#profile" data-icon="star" data-theme="b">我的信息</a></li>
             </ul>
         </div><!-- /navbar -->
