--- a/gis.html
+++ b/gis.html
@@ -31,9 +31,9 @@
                 map: map
             });
             infoWin.open();
-            infoWin.setContent('<div style="width:200px;padding-top:10px;">'+
+            infoWin.setContent('<a href="teacher_info.html"><div style="width:200px;padding-top:10px;">'+
                     '<img style="float:left;width:30px;height:30px" src="img/1.png"/> '+
-                    '我在这里打酱油</div>');
+                    '我在这里打酱油</div></a>');
             infoWin.setPosition(center);
         }
     </script>
@@ -44,7 +44,7 @@
     <h1>家教云平台</h1>
     <a href="index.html" data-role="button" class="ui-btn-right" data-icon="home">列表显示</a>
 </div><!-- /header -->
-<div style="width:323px;height:400px;margin:10px;padding:10px;" id="container"></div>
+<div style="width:device-width;height:400px;margin:10px;padding:10px;" id="container" ></div>
 <div id="info">
 </div>
 </body>
