--- a/search.html
+++ b/search.html
@@ -22,7 +22,7 @@
                 <fieldset data-role="controlgroup" id="fsex" data-inline="true" data-type="horizontal">
 
                     <input type="radio" name="fsex" id="fsexNone" value="0" checked="checked" >
-                    <label for="fsexNone">无所谓</label>
+                    <label for="fsexNone">不限</label>
                     <input type="radio" name="fsex" id="fsexMale" value="1">
                     <label for="fsexMale">男</label>
                     <input type="radio" name="fsex" id="fsexFemale" value="2">
