--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-﻿<!DOCTYPE html>
+﻿﻿<!DOCTYPE html>
 <html>
 <head>
     <title>家教云平台</title>
     <meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1">
     <link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.4.2.min.css">
+    <link rel="stylesheet" type="text/css" href="css/x.css">
     <script src="js/jquery.js"></script>
     <script src="js/jquery.mobile-1.4.2.min.js"></script>
     <script>
@@ -25,49 +26,148 @@
         <a href="search.html" data-role="button" data-icon="search">查找</a>
         <h1>家教云平台</h1>
         <a href="gis.html" data-role="button" class="ui-btn-right" data-icon="search">位置显示</a>
+
+        <div data-role="navbar">
+            <ul>
+                <!--                <li>
+                                    <select name="fsex" id="fsex">
+                                        <option value="all">性别</option>
+                                        <option value="sexMale">男</option>
+                                        <option value="sexFemale">女</option>
+                                </li>
+                -->                <li>
+                <select name="grade" id="grade">
+                    <option value="all">年级</option>
+                    <option value="grade1">一年级</option>
+                    <option value="grade2">二年级</option>
+                    <option value="grade3">三年级</option>
+                    <option value="grade4">四年级</option>
+                    <option value="grade5">五年级</option>
+                    <option value="grade6">六年级</option>
+                    <option value="junior1">初一</option>
+                    <option value="junior2">初二</option>
+                    <option value="senior3">初三</option>
+                    <option value="senior1">高一</option>
+                    <option value="senior2">高二</option>
+                    <option value="senior3">高三</option>
+                </select>
+            </li>
+                <li><select name="subject" id="subject">
+                    <option value="all">科目</option>
+                    <option value="grade1">语文</option>
+                    <option value="grade2">数学</option>
+                    <option value="grade3">英语</option>
+                    <option value="grade4">物理</option>
+                    <option value="grade5">化学</option>
+                    <option value="grade6">生物</option>
+                    <option value="junior1">政治</option>
+                    <option value="junior2">历史</option>
+                    <option value="junior3">地理</option>
+                    <option value="others">其他</option>
+                </select>
+
+                </li>
+            </ul>
+        </div>
     </div><!-- /header -->
 <ul data-role="listview" data-inset="true">
-    <li><a href="#">
+    <li><a href="teacher_info.html">
         <img src="img/1.jpg">
-        <h2>Broken Bells</h2>
-        <p>Broken Bells</p></a>
+        <h2>张三</h2>
+        <p>初中数学，高一英语</p>
+    </a>
     </li>
-    <li><a href="#">
+    <li><a href="teacher_info.html">
         <img src="img/1.jpg">
-        <h2>Warning</h2>
-        <p>Hot Chip</p></a>
+        <h2>张三</h2>
+        <p>初中数学，高一英语</p>
+    </a>
     </li>
-    <li><a href="#">
+    <li><a href="teacher_info.html">
         <img src="img/1.jpg">
-        <h2>Wolfgang Amadeus Phoenix</h2>
-        <p>Phoenix</p></a>
+        <h2>张三</h2>
+        <p>初中数学，高一英语</p>
+    </a>
     </li>
-    <li><a href="#">
+    <li><a href="teacher_info.html">
         <img src="img/1.jpg">
-        <h2>Broken Bells</h2>
-        <p>Broken Bells</p></a>
+        <h2>张三</h2>
+        <p>初中数学，高一英语</p>
+    </a>
     </li>
-    <li><a href="#">
+    <li><a href="teacher_info.html">
         <img src="img/1.jpg">
-        <h2>Warning</h2>
-        <p>Hot Chip</p></a>
+        <h2>张三</h2>
+        <p>初中数学，高一英语</p>
+    </a>
     </li>
-    <li><a href="#">
+    <li><a href="teacher_info.html">
         <img src="img/1.jpg">
-        <h2>Wolfgang Amadeus Phoenix</h2>
-        <p>Phoenix</p></a>
+        <h2>张三</h2>
+        <p>初中数学，高一英语</p>
+    </a>
     </li>
-    <li><a href="#">
+    <li><a href="teacher_info.html">
         <img src="img/1.jpg">
-        <h2>Broken Bells</h2>
-        <p>Broken Bells</p></a>
+        <h2>张三</h2>
+        <p>初中数学，高一英语</p>
+    </a>
     </li>
+    <li><a href="teacher_info.html">
+        <img src="img/1.jpg">
+        <h2>张三</h2>
+        <p>初中数学，高一英语</p>
+    </a>
+    </li>
+    <li><a href="teacher_info.html">
+        <img src="img/1.jpg">
+        <h2>张三</h2>
+        <p>初中数学，高一英语</p>
+    </a>
+    </li>
+    <li><a href="teacher_info.html">
+        <img src="img/1.jpg">
+        <h2>张三</h2>
+        <p>初中数学，高一英语</p>
+    </a>
+    </li>
+    <li><a href="teacher_info.html">
+        <img src="img/1.jpg">
+        <h2>张三</h2>
+        <p>初中数学，高一英语</p>
+    </a>
+    </li>
+    <li><a href="teacher_info.html">
+        <img src="img/1.jpg">
+        <h2>张三</h2>
+        <p>初中数学，高一英语</p>
+    </a>
+    </li>
+    <li><a href="teacher_info.html">
+        <img src="img/1.jpg">
+        <h2>张三</h2>
+        <p>初中数学，高一英语</p>
+    </a>
+    </li>
+    <li><a href="teacher_info.html">
+        <img src="img/1.jpg">
+        <h2>张三</h2>
+        <p>初中数学，高一英语</p>
+    </a>
+    </li>
+    <li><a href="teacher_info.html">
+        <img src="img/1.jpg">
+        <h2>张三</h2>
+        <p>初中数学，高一英语</p>
+    </a>
+    </li>
+
 
 </ul>
     <div data-role="footer" data-position="fixed" data-id="main-tabbar" data-theme="b">
         <div data-role="navbar">
             <ul>
-                <li><a href="#home"  data-icon="home" data-theme="b">家教云平台</a></li>
+                <li><a href="#home" class="ui-state-persist" data-icon="home" data-theme="b">找家教</a></li>
                 <li><a href="#profile" data-icon="star" data-theme="b">我的信息</a></li>
             </ul>
         </div><!-- /navbar -->
@@ -75,7 +175,7 @@
 </div>
 
 <!--个人信息页面-->
-<div data-role="page" id="profile" data-title="找家教">
+<div data-role="page" id="profile" data-title="家教云平台">
     <div data-role="header" data-position="fixed" data-tap-toggle="false" data-theme="b">
         <h1>家教云平台</h1>
     </div><!-- /header -->
@@ -94,8 +194,8 @@
     <div data-role="footer" data-position="fixed" data-id="main-tabbar" data-theme="b">
         <div data-role="navbar">
             <ul>
-                <li><a href="#home" class="ui-state-persist" data-icon="home" data-theme="b">找家教</a></li>
-                <li><a href="#profile" data-icon="star" data-theme="b">我的信息</a></li>
+                <li><a href="#home" data-icon="home" data-theme="b">找家教</a></li>
+                <li><a href="#profile" class="ui-state-persist" data-icon="star" data-theme="b">我的信息</a></li>
             </ul>
         </div><!-- /navbar -->
     </div><!-- /footer -->
