--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
-﻿﻿<!DOCTYPE html>
+﻿﻿<!DOCTYPEhtml>
 <html>
-<head>
-    <title>家教云平台</title>
-    <meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1">
-    <link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.4.2.min.css">
-    <link rel="stylesheet" type="text/css" href="css/x.css">
-    <script src="js/jquery.js"></script>
-    <script src="js/jquery.mobile-1.4.2.min.js"></script>
-    <script>
-        $(function(){
-            $("#home").bind("swipeleft",function(){
-                $.mobile.changePage("#profile", {transition:"slide",reverse:false}, true, true);
+    <head>
+        <title>家教云平台</title>
+        <meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1">
+        <link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.4.2.min.css">
+        <link rel="stylesheet" type="text/css" href="css/x.css">
+        <script src="js/jquery.js"></script>
+        <script src="js/jquery.mobile-1.4.2.min.js"></script>
+        <script>
+            $(function(){
+                $("#home").bind("swipeleft",function(){
+                    $.mobile.changePage("#profile", {transition:"slide",reverse:false}, true, true);
+                });
+                $("#profile").bind("swiperight",function(){
+                    $.mobile.changePage("#home", {transition:"slide",reverse:true}, true, true);
+                });
             });
-            $("#profile").bind("swiperight",function(){
-                $.mobile.changePage("#home", {transition:"slide",reverse:true}, true, true);
-            });
-        });
-    </script>
-</head>
+        </script>
+    </head>
 <body>
 
 <!--找家教页面-->
@@ -71,91 +71,91 @@
         </div>
     </div><!-- /header -->
 <ul data-role="listview" data-inset="true">
-    <li><a href="teacher_info.html">
+    <li><a href="testc.html">
         <img src="img/1.jpg">
         <h2>张三</h2>
         <p>初中数学，高一英语</p>
     </a>
     </li>
-    <li><a href="teacher_info.html">
+    <li><a href="testc.html">
         <img src="img/1.jpg">
         <h2>张三</h2>
         <p>初中数学，高一英语</p>
     </a>
     </li>
-    <li><a href="teacher_info.html">
+    <li><a href="testc.html">
         <img src="img/1.jpg">
         <h2>张三</h2>
         <p>初中数学，高一英语</p>
     </a>
     </li>
-    <li><a href="teacher_info.html">
+    <li><a href="testc.html">
         <img src="img/1.jpg">
         <h2>张三</h2>
         <p>初中数学，高一英语</p>
     </a>
     </li>
-    <li><a href="teacher_info.html">
+    <li><a href="testc.html">
         <img src="img/1.jpg">
         <h2>张三</h2>
         <p>初中数学，高一英语</p>
     </a>
     </li>
-    <li><a href="teacher_info.html">
+    <li><a href="testc.html">
         <img src="img/1.jpg">
         <h2>张三</h2>
         <p>初中数学，高一英语</p>
     </a>
     </li>
-    <li><a href="teacher_info.html">
+    <li><a href="testc.html">
         <img src="img/1.jpg">
         <h2>张三</h2>
         <p>初中数学，高一英语</p>
     </a>
     </li>
-    <li><a href="teacher_info.html">
+    <li><a href="testc.html">
         <img src="img/1.jpg">
         <h2>张三</h2>
         <p>初中数学，高一英语</p>
     </a>
     </li>
-    <li><a href="teacher_info.html">
+    <li><a href="testc.html">
         <img src="img/1.jpg">
         <h2>张三</h2>
         <p>初中数学，高一英语</p>
     </a>
     </li>
-    <li><a href="teacher_info.html">
+    <li><a href="testc.html">
         <img src="img/1.jpg">
         <h2>张三</h2>
         <p>初中数学，高一英语</p>
     </a>
     </li>
-    <li><a href="teacher_info.html">
+    <li><a href="testc.html">
         <img src="img/1.jpg">
         <h2>张三</h2>
         <p>初中数学，高一英语</p>
     </a>
     </li>
-    <li><a href="teacher_info.html">
+    <li><a href="testc.html">
         <img src="img/1.jpg">
         <h2>张三</h2>
         <p>初中数学，高一英语</p>
     </a>
     </li>
-    <li><a href="teacher_info.html">
+    <li><a href="testc.html">
         <img src="img/1.jpg">
         <h2>张三</h2>
         <p>初中数学，高一英语</p>
     </a>
     </li>
-    <li><a href="teacher_info.html">
+    <li><a href="testc.html">
         <img src="img/1.jpg">
         <h2>张三</h2>
         <p>初中数学，高一英语</p>
     </a>
     </li>
-    <li><a href="teacher_info.html">
+    <li><a href="testc.html">
         <img src="img/1.jpg">
         <h2>张三</h2>
         <p>初中数学，高一英语</p>
