--- a/testc.html
+++ b/testc.html
@@ -16,5 +16,12 @@
         <a href="index.html" data-role="button" class="ui-btn-right" data-icon="home">首页</a>
     </div><!-- /header -->
 
+    <div class="head_img">
+        <img src="img/1.jpg">
+    </div>
+    <div >
+        <p></p>
+    </div>
+
 </body>
 </html>
