--- a/gis.html
+++ b/gis.html
@@ -31,7 +31,7 @@
                 map: map
             });
             infoWin.open();
-            infoWin.setContent('<a href="testc.html"><div style="width:200px;padding-top:10px;">'+
+            infoWin.setContent('<a href="info.html"><div style="width:200px;padding-top:10px;">'+
                     '<img style="float:left;width:30px;height:30px" src="img/1.png"/> '+
                     '我在这里打酱油</div></a>');
             infoWin.setPosition(center);
