--- a/index.html
+++ b/index.html
@@ -71,91 +71,91 @@
         </div>
     </div><!-- /header -->
 <ul data-role="listview" data-inset="true">
-    <li><a href="testc.html">
+    <li><a href="info.html">
         <img src="img/1.jpg">
         <h2>张三</h2>
         <p>初中数学，高一英语</p>
     </a>
     </li>
-    <li><a href="testc.html">
+    <li><a href="info.html">
         <img src="img/1.jpg">
         <h2>张三</h2>
         <p>初中数学，高一英语</p>
     </a>
     </li>
-    <li><a href="testc.html">
+    <li><a href="info.html">
         <img src="img/1.jpg">
         <h2>张三</h2>
         <p>初中数学，高一英语</p>
     </a>
     </li>
-    <li><a href="testc.html">
+    <li><a href="info.html">
         <img src="img/1.jpg">
         <h2>张三</h2>
         <p>初中数学，高一英语</p>
     </a>
     </li>
-    <li><a href="testc.html">
+    <li><a href="info.html">
         <img src="img/1.jpg">
         <h2>张三</h2>
         <p>初中数学，高一英语</p>
     </a>
     </li>
-    <li><a href="testc.html">
+    <li><a href="info.html">
         <img src="img/1.jpg">
         <h2>张三</h2>
         <p>初中数学，高一英语</p>
     </a>
     </li>
-    <li><a href="testc.html">
+    <li><a href="info.html">
         <img src="img/1.jpg">
         <h2>张三</h2>
         <p>初中数学，高一英语</p>
     </a>
     </li>
-    <li><a href="testc.html">
+    <li><a href="info.html">
         <img src="img/1.jpg">
         <h2>张三</h2>
         <p>初中数学，高一英语</p>
     </a>
     </li>
-    <li><a href="testc.html">
+    <li><a href="info.html">
         <img src="img/1.jpg">
         <h2>张三</h2>
         <p>初中数学，高一英语</p>
     </a>
     </li>
-    <li><a href="testc.html">
+    <li><a href="info.html">
         <img src="img/1.jpg">
         <h2>张三</h2>
         <p>初中数学，高一英语</p>
     </a>
     </li>
-    <li><a href="testc.html">
+    <li><a href="info.html">
         <img src="img/1.jpg">
         <h2>张三</h2>
         <p>初中数学，高一英语</p>
     </a>
     </li>
-    <li><a href="testc.html">
+    <li><a href="info.html">
         <img src="img/1.jpg">
         <h2>张三</h2>
         <p>初中数学，高一英语</p>
     </a>
     </li>
-    <li><a href="testc.html">
+    <li><a href="info.html">
         <img src="img/1.jpg">
         <h2>张三</h2>
         <p>初中数学，高一英语</p>
     </a>
     </li>
-    <li><a href="testc.html">
+    <li><a href="info.html">
         <img src="img/1.jpg">
         <h2>张三</h2>
         <p>初中数学，高一英语</p>
     </a>
     </li>
-    <li><a href="testc.html">
+    <li><a href="info.html">
         <img src="img/1.jpg">
         <h2>张三</h2>
         <p>初中数学，高一英语</p>
