--- a/info.html
+++ b/info.html
@@ -4,6 +4,7 @@
     <title>家教云平台</title>
     <meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1">
     <link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.4.2.min.css">
+    <link rel="stylesheet" type="text/css" href="css/x.css">
     <script src="js/jquery.js"></script>
     <script src="js/jquery.mobile-1.4.2.min.js"></script>
 </head>
