--- a/gis.html
+++ b/gis.html
@@ -39,13 +39,13 @@
     </script>
 </head>
 <body onload="init()">
-<div data-role="header" data-position="fixed" data-tap-toggle="false" data-theme="b"  data-add-back-btn="true" data-back-btn-text="返回">
-    <!--        <a href="" data-role="button" data-icon="back">返回</a>  -->
-    <h1>家教云平台</h1>
-    <a href="index.html" data-role="button" class="ui-btn-right" data-icon="home">列表显示</a>
-</div><!-- /header -->
-<div style="width:device-width;height:400px;margin:10px;padding:10px;" id="container" ></div>
-<div id="info">
-</div>
+    <header data-role="header" data-position="fixed" data-tap-toggle="false" data-theme="b">
+        <a href="#" data-icon="arrow-l" data-iconpos="left" data-rel="back" data-transition="slide" data-direction="reverse">返回</a>
+        <h1>家教云平台</h1>
+        <a href="index.html" data-role="button" class="ui-btn-right" data-icon="home">列表显示</a>
+    </header><!-- /header -->
+    <div style="width:device-width;height:400px;margin:10px;padding:10px;" id="container" ></div>
+    <div id="info">
+    </div>
 </body>
 </html>
