--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>家教云平台</title>
-        <meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1">
+        <meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1,user-scalable=no">
         <link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.4.2.min.css">
         <link rel="stylesheet" type="text/css" href="css/x.css">
         <script src="js/jquery.js"></script>
@@ -22,10 +22,10 @@
 
 <!--找家教页面-->
 <div data-role="page" id="home" data-title="家教云平台" data-add-back-btn="true" >
-    <div data-role="header" data-position="fixed" data-tap-toggle="false" data-theme="b">
+    <header data-role="header" data-position="fixed" data-tap-toggle="false" data-theme="b">
         <a href="search.html" data-role="button" data-icon="search">查找</a>
         <h1>家教云平台</h1>
-        <a href="gis.html" data-role="button" class="ui-btn-right" data-icon="search">位置显示</a>
+        <a href="gis.html" data-role="button" class="ui-btn-right" data-icon="search" data-ajax="false">位置显示</a>
 
         <div data-role="navbar">
             <ul>
@@ -69,116 +69,118 @@
                 </li>
             </ul>
         </div>
-    </div><!-- /header -->
-<ul data-role="listview" data-inset="true">
-    <li><a href="info.html">
-        <img src="img/1.jpg">
-        <h2>张三</h2>
-        <p>初中数学，高一英语</p>
-    </a>
-    </li>
-    <li><a href="info.html">
-        <img src="img/1.jpg">
-        <h2>张三</h2>
-        <p>初中数学，高一英语</p>
-    </a>
-    </li>
-    <li><a href="info.html">
-        <img src="img/1.jpg">
-        <h2>张三</h2>
-        <p>初中数学，高一英语</p>
-    </a>
-    </li>
-    <li><a href="info.html">
-        <img src="img/1.jpg">
-        <h2>张三</h2>
-        <p>初中数学，高一英语</p>
-    </a>
-    </li>
-    <li><a href="info.html">
-        <img src="img/1.jpg">
-        <h2>张三</h2>
-        <p>初中数学，高一英语</p>
-    </a>
-    </li>
-    <li><a href="info.html">
-        <img src="img/1.jpg">
-        <h2>张三</h2>
-        <p>初中数学，高一英语</p>
-    </a>
-    </li>
-    <li><a href="info.html">
-        <img src="img/1.jpg">
-        <h2>张三</h2>
-        <p>初中数学，高一英语</p>
-    </a>
-    </li>
-    <li><a href="info.html">
-        <img src="img/1.jpg">
-        <h2>张三</h2>
-        <p>初中数学，高一英语</p>
-    </a>
-    </li>
-    <li><a href="info.html">
-        <img src="img/1.jpg">
-        <h2>张三</h2>
-        <p>初中数学，高一英语</p>
-    </a>
-    </li>
-    <li><a href="info.html">
-        <img src="img/1.jpg">
-        <h2>张三</h2>
-        <p>初中数学，高一英语</p>
-    </a>
-    </li>
-    <li><a href="info.html">
-        <img src="img/1.jpg">
-        <h2>张三</h2>
-        <p>初中数学，高一英语</p>
-    </a>
-    </li>
-    <li><a href="info.html">
-        <img src="img/1.jpg">
-        <h2>张三</h2>
-        <p>初中数学，高一英语</p>
-    </a>
-    </li>
-    <li><a href="info.html">
-        <img src="img/1.jpg">
-        <h2>张三</h2>
-        <p>初中数学，高一英语</p>
-    </a>
-    </li>
-    <li><a href="info.html">
-        <img src="img/1.jpg">
-        <h2>张三</h2>
-        <p>初中数学，高一英语</p>
-    </a>
-    </li>
-    <li><a href="info.html">
-        <img src="img/1.jpg">
-        <h2>张三</h2>
-        <p>初中数学，高一英语</p>
-    </a>
-    </li>
+    </header><!-- /header -->
+    <div data-role="content">
+    <ul data-role="listview" data-inset="true">
+            <li><a href="info.html">
+                <img src="img/1.jpg">
+                <h2>张三</h2>
+                <p>初中数学，高一英语</p>
+            </a>
+            </li>
+            <li><a href="info.html">
+                <img src="img/1.jpg">
+                <h2>张三</h2>
+                <p>初中数学，高一英语</p>
+            </a>
+            </li>
+            <li><a href="info.html">
+                <img src="img/1.jpg">
+                <h2>张三</h2>
+                <p>初中数学，高一英语</p>
+            </a>
+            </li>
+            <li><a href="info.html">
+                <img src="img/1.jpg">
+                <h2>张三</h2>
+                <p>初中数学，高一英语</p>
+            </a>
+            </li>
+            <li><a href="info.html">
+                <img src="img/1.jpg">
+                <h2>张三</h2>
+                <p>初中数学，高一英语</p>
+            </a>
+            </li>
+            <li><a href="info.html">
+                <img src="img/1.jpg">
+                <h2>张三</h2>
+                <p>初中数学，高一英语</p>
+            </a>
+            </li>
+            <li><a href="info.html">
+                <img src="img/1.jpg">
+                <h2>张三</h2>
+                <p>初中数学，高一英语</p>
+            </a>
+            </li>
+            <li><a href="info.html">
+                <img src="img/1.jpg">
+                <h2>张三</h2>
+                <p>初中数学，高一英语</p>
+            </a>
+            </li>
+            <li><a href="info.html">
+                <img src="img/1.jpg">
+                <h2>张三</h2>
+                <p>初中数学，高一英语</p>
+            </a>
+            </li>
+            <li><a href="info.html">
+                <img src="img/1.jpg">
+                <h2>张三</h2>
+                <p>初中数学，高一英语</p>
+            </a>
+            </li>
+            <li><a href="info.html">
+                <img src="img/1.jpg">
+                <h2>张三</h2>
+                <p>初中数学，高一英语</p>
+            </a>
+            </li>
+            <li><a href="info.html">
+                <img src="img/1.jpg">
+                <h2>张三</h2>
+                <p>初中数学，高一英语</p>
+            </a>
+            </li>
+            <li><a href="info.html">
+                <img src="img/1.jpg">
+                <h2>张三</h2>
+                <p>初中数学，高一英语</p>
+            </a>
+            </li>
+            <li><a href="info.html">
+                <img src="img/1.jpg">
+                <h2>张三</h2>
+                <p>初中数学，高一英语</p>
+            </a>
+            </li>
+            <li><a href="info.html">
+                <img src="img/1.jpg">
+                <h2>张三</h2>
+                <p>初中数学，高一英语</p>
+            </a>
+            </li>
 
 
-</ul>
-    <div data-role="footer" data-position="fixed" data-id="main-tabbar" data-theme="b">
+        </ul>
+    </div>
+    <footer data-role="footer" data-position="fixed" data-id="main-tabbar" data-theme="b">
         <div data-role="navbar">
             <ul>
                 <li><a href="#home" class="ui-state-persist" data-icon="home" data-theme="b">找家教</a></li>
                 <li><a href="#profile" data-icon="star" data-theme="b">我的信息</a></li>
             </ul>
         </div><!-- /navbar -->
-    </div><!-- /footer -->
+    </footer><!-- /footer -->
 </div>
 
 <!--个人信息页面-->
 <div data-role="page" id="profile" data-title="家教云平台">
-    <div data-role="header" data-position="fixed" data-tap-toggle="false" data-theme="b">
+    <header data-role="header" data-position="fixed" data-tap-toggle="false" data-theme="b">
         <h1>家教云平台</h1>
-    </div><!-- /header -->
+    </header><!-- /header -->
 
     <div data-role="content">
         <ul data-role="listview" data-inset="true">
@@ -191,14 +193,14 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed" data-id="main-tabbar" data-theme="b">
+    <footer data-role="footer" data-position="fixed" data-id="main-tabbar" data-theme="b">
         <div data-role="navbar">
             <ul>
                 <li><a href="#home" data-icon="home" data-theme="b">找家教</a></li>
                 <li><a href="#profile" class="ui-state-persist" data-icon="star" data-theme="b">我的信息</a></li>
             </ul>
         </div><!-- /navbar -->
-    </div><!-- /footer -->
+    </footer><!-- /footer -->
 </div>
 
 </body>
