--- a/info.html
+++ b/info.html
@@ -10,19 +10,23 @@
 </head>
 <body>
 <!-- /header -->
-<div data-role="page">
-    <div data-role="header" data-position="fixed" data-tap-toggle="false" data-theme="b"  data-add-back-btn="true" data-back-btn-text="返回">
+<div data-role="page" id="info">
+    <header data-role="header" data-position="fixed" data-tap-toggle="false" data-theme="b"  data-add-back-btn="true" data-back-btn-text="返回">
         <!--        <a href="" data-role="button" data-icon="back">返回</a>  -->
         <h1>家教云平台</h1>
         <a href="index.html" data-role="button" class="ui-btn-right" data-icon="home">首页</a>
-    </div><!-- /header -->
+    </header><!-- /header -->
 
-    <div class="head_img">
-        <img src="img/1.jpg">
+    <div data-role="content">
+        <div class="head_img">
+            <img src="img/1.jpg">
+        </div>
+        <div >
+            <p></p>
+        </div>
+
     </div>
-    <div >
-        <p></p>
-    </div>
+
 
 </body>
 </html>
