--- a/search.html
+++ b/search.html
@@ -8,11 +8,11 @@
 </head>
 <body>
 <div data-role="page">
-    <div data-role="header" data-position="fixed" data-tap-toggle="false" data-theme="b"  data-add-back-btn="true" data-back-btn-text="返回">
+    <header data-role="header" data-position="fixed" data-tap-toggle="false" data-theme="b"  data-add-back-btn="true" data-back-btn-text="返回">
 <!--        <a href="" data-role="button" data-icon="back">返回</a>  -->
         <h1>家教云平台</h1>
         <a href="index.html" data-role="button" class="ui-btn-right" data-icon="home">首页</a>
-    </div><!-- /header -->
+    </header><!-- /header -->
     <div data-role="content">
         <form method="post" action="none">
             <fieldset  >
@@ -60,7 +60,7 @@
                 </select>
             </fieldset>
             <div data-role="footer" data-position="fixed"  data-theme="b">
-            <input type="submit"  data-role="button" data-inline="false" value="查找">
+                <input type="submit"  data-role="button" data-inline="false" value="查找">
             </div>
         </form>
     </div>
