--- a/a.html
+++ b/a.html
@@ -1,12 +1,57 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>家教云平台</title>
+    <meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1">
+    <link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.4.2.min.css">
+    <link rel="stylesheet" type="text/css" href="css/x.css">
+    <script src="js/jquery.js"></script>
+    <script src="js/jquery.mobile-1.4.2.min.js"></script>
 </head>
-
 <body>
-<p>hhh</p>
+<!-- /header -->
+<div data-role="page" id="info">
+    <header data-role="header" data-position="fixed" data-tap-toggle="false" data-theme="b"  data-add-back-btn="true" data-back-btn-text="返回">
+        <!--        <a href="" data-role="button" data-icon="back">返回</a>  -->
+        <h1>家教云平台</h1>
+        <a href="index.html" data-role="button" class="ui-btn-right" data-icon="home">首页</a>
+    </header><!-- /header -->
+
+    <div data-role="content">
+        <div class="head_img">
+            <img src="img/1.jpg">
+        </div>
+        <div >
+            <p></p>
+        </div>
+
+    </div>
+
+    <div data-role="tabs">
+
+        <div data-role="footer" data-position="fixed" data-tap-toggle="false">
+        <div data-role="navbar">
+            <ul>
+                <li><a href="#one" data-theme="a" data-ajax="false">one</a></li>
+                <li><a href="#two" data-theme="a" data-ajax="false">two</a></li>
+                <li><a href="abc.html" data-theme="a" data-ajax="false">three</a></li>
+            </ul>
+        </div>
+        </div>
+        <div id="one" class="ui-content">
+            <h1>First tab contents</h1>
+        </div>
+        <div id="two" class="ui-content">
+            <ul data-role="listview">
+                <li><a href="#">Acura</a></li>
+                <li><a href="#">Audi</a></li>
+                <li><a href="#">BMW</a></li>
+                <li><a href="#">Cadillac</a></li>
+                <li><a href="#">Ferrari</a></li>
+            </ul>
+        </div>
+    </div>
+
+
 </body>
-
-
 </html>
