--- a/gis.html
+++ b/gis.html
@@ -32,7 +32,7 @@
             });
             infoWin.open();
             infoWin.setContent('<a href="info.html"><div style="width:200px;padding-top:10px;">'+
-                    '<img style="float:left;width:30px;height:30px" src="img/1.png"/> '+
+                    '<img style="float:left;width:30px;height:30px" src="img/1.jpg"/> '+
                     '我在这里打酱油</div></a>');
             infoWin.setPosition(center);
         }
