--- a/info.html
+++ b/info.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/html">
 <head>
     <title>家教云平台</title>
     <meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1">
@@ -11,19 +11,57 @@
 <body>
 <!-- /header -->
 <div data-role="page" id="info">
-    <header data-role="header" data-position="fixed" data-tap-toggle="false" data-theme="b"  data-add-back-btn="true" data-back-btn-text="返回">
-        <!--        <a href="" data-role="button" data-icon="back">返回</a>  -->
+    <header data-role="header" data-position="fixed" data-tap-toggle="false" data-theme="b">
+        <a href="#" data-icon="arrow-l" data-iconpos="left" data-rel="back" data-transition="slide" data-direction="reverse">返回</a>
         <h1>家教云平台</h1>
         <a href="index.html" data-role="button" class="ui-btn-right" data-icon="home">首页</a>
     </header><!-- /header -->
 
-    <div data-role="content">
-        <div class="head_img">
-            <img src="img/1.jpg">
+    <div data-role="content" id="content">
+        <div class="ui-grid-a">
+            <div class="ui-block-a">
+                <img src="img/1.jpg">
+                <div class="rank">
+                    <ul type="none" >
+                        <li class="score"><img src="img/starFull.jpg"/></li>
+                        <li class="score"><img src="img/starFull.jpg"/></li>
+                        <li class="score"><img src="img/starFull.jpg"/></li>
+                        <li class="score"><img src="img/starFull.jpg"/></li>
+                        <li class="score"><img src="img/star.jpg"/></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="ui-block-b">
+                <div class="ui-bar ui-bar-a h60">
+                <span for="name">姓名：</span>
+                <span id="name">张三</span>
+                </div>
+                <div class="ui-bar ui-bar-b h60">
+                <span for="sex">性别：</span>
+                <span id="sex">男</span>
+                </div>
+
+                <div class="ui-bar ui-bar-a h60">
+                    <span for="profession">职业：</span>
+                    <span id="profession">学生</span>
+                </div>
+                <div class="ui-bar ui-bar-b h60">
+                    <span for="school">毕业学校：</span>
+                    <span id="school">华工</span>
+                </div>
+                </div>
+            </div>
         </div>
-        <div >
-            <p></p>
-        </div>
+        <!--<div class="ui-grid-b">-->
+            <div class="ui-bar ui-bar-a h60">
+            <span for="subject">科目：</span>
+            <span class="subject">初二英语</span>
+            </div>
+            <div class="ui-bar ui-bar-b">
+            <span for="selfIntroduction">自我介绍：</span>
+            <p id="selfIntroduction">本人学习良好，高考成绩优良，基础知识还不错，性格开朗。</p>
+            </div>
+        <!--</div>-->
 
     </div>
 
