--- a/search.html
+++ b/search.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <title>查找</title>
-    <link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.4.2.min.css">
+    <meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1,user-scalable=no">
+    <link rel="stylesheet" href="css/jquery.mobile-1.4.2.min.css">
     <script src="js/jquery.js"></script>
     <script src="js/jquery.mobile-1.4.2.min.js"></script>
 </head>
@@ -14,19 +15,19 @@
         <a href="index.html" data-role="button" class="ui-btn-right" data-icon="home">首页</a>
     </header><!-- /header -->
     <div data-role="content">
-        <form method="post" action="none">
+        <form method="post" action="#" name="search">
             <fieldset  >
                 <label for="fname">姓名：</label>
                 <input type="text" name="fname" id="fname">
-                <label for="fsex" data-inline="true">性别：</label>
-                <fieldset data-role="controlgroup" id="fsex" data-inline="true" data-type="horizontal">
+                <label for="sex" data-inline="true">性别：</label>
+                <fieldset data-role="controlgroup" id="sex" data-inline="true" data-type="horizontal">
 
-                    <input type="radio" name="fsex" id="fsexNone" value="0" checked="checked" >
-                    <label for="fsexNone">不限</label>
-                    <input type="radio" name="fsex" id="fsexMale" value="1">
-                    <label for="fsexMale">男</label>
-                    <input type="radio" name="fsex" id="fsexFemale" value="2">
-                    <label for="fsexFemale">女</label>
+                    <input type="radio" name="sex" id="sexNone" value="0" checked="checked" >
+                    <label for="sexNone">不限</label>
+                    <input type="radio" name="sex" id="sexMale" value="male">
+                    <label for="sexMale">男</label>
+                    <input type="radio" name="sex" id="sexFemale" value="female">
+                    <label for="sexFemale">女</label>
                 </fieldset>
 
                 <label for="grade">年级</label>
@@ -47,22 +48,23 @@
 
                 <label for="subject">科目</label>
                 <select name="subject" id="subject">
-                    <option value="grade1">语文</option>
-                    <option value="grade2">数学</option>
-                    <option value="grade3">英语</option>
-                    <option value="grade4">物理</option>
-                    <option value="grade5">化学</option>
-                    <option value="grade6">生物</option>
-                    <option value="junior1">政治</option>
-                    <option value="junior2">历史</option>
-                    <option value="junior3">地理</option>
+                    <option value="chinese">语文</option>
+                    <option value="math">数学</option>
+                    <option value="english">英语</option>
+                    <option value="physics">物理</option>
+                    <option value="chemistry">化学</option>
+                    <option value="biology">生物</option>
+                    <option value="politics">政治</option>
+                    <option value="history">历史</option>
+                    <option value="geography">地理</option>
                     <option value="others">其他</option>
                 </select>
             </fieldset>
-            <div data-role="footer" data-position="fixed"  data-theme="b">
-                <input type="submit"  data-role="button" data-inline="false" value="查找">
-            </div>
+
         </form>
+    </div>
+    <div data-role="footer" data-position="fixed"  data-theme="b">
+        <button class="ui-btn ui-shadow" data-theme="b" onclick="javascript:document.search.submit();">查找</button>
     </div>
 
 </div>
